<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E35B5B"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/total_questions"
        android:textColor="#FFEBEE"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/choices_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/this_will_be_our_question"
            android:textColor="#F7F5F8"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ans_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBFBFB"
            android:text="@string/ans_a"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ans_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBFBFB"
            android:text="@string/ans_b"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ans_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBFBFB"
            android:text="@string/ans_c"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ans_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBFBFB"
            android:text="@string/ans_d"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#65E614"
        android:text="@string/submit"
        android:layout_below="@id/choices_layout"
        android:textColor="@color/black"
        android:textSize="24sp"/>

</RelativeLayout>